--- a/docs/snapshot_template.tex
+++ b/docs/snapshot_template.tex
@@ -241,38 +241,36 @@
 
 Some literature sources estimate growth to be 1 statolith ring/day, and
 literature review supports a lifespan of less than 1 year. Participants
-at the longfin squid summit estimated a maximum age of 15 months. 2024
-statolith aging from SQUIBS indicates maximum ages of 7 months for
-females and 8.6 months for males (right) from squid caught in the
-fishery.
+at the longfin squid summit estimated a maximum age of 15 months. SQUIBS
+statolith aging (2024) indicates maximum ages of 7 months for females
+and 8.6 months for males (right) from squid caught in the fishery.
 
 \vspace{0.25cm}
 
 \subsection{Maturity (from SQUIBS)}
 
-In 2024, most stage 4 squid caught in summer with very little mature
-squid caught the rest of the year. Highest numbers of stage 1 squid were
-caught in the second half of 2024. Of 912 squid assessed, the dominant
-maturity stage in females increases from fall to spring. The highest
-percentage of mature male squid were caught in spring and summer. No
-stage 4 females and very few stage 1 males were caught.
+For squid caught in 2024, most stage 4 squid were caught in summer and
+very few the rest of the year. The majority of stage 1 squid were caught
+in the second half of 2024. Of 912 squid assessed, the dominant maturity
+stage in females increases from fall to spring. The highest percentage
+of mature male squid were caught in spring and summer.
 
 \vspace{0.25cm}
 
 \subsection{Migration and movement dynamics}
 
 In November/December, longfin migrate from the inshore shelf to deep,
-warmer slope waters along the shelf edge to overwinter. By May/June of
-the next year, they migrate back to shallow coastal waters from the MAB
-to southern New England to spawn {[}1{]}. Recent work hypothesizes the
-possibility of a winter cohort that hatches south of Cape Hatteras and
-migrates onto the Northeast shelf {[}2{]}. Fishery observations describe
-a spatial gradient of 1-6 cm mantle length (ML) squid from waters south
-of Hatteras through southern New England, with the smallest squid
-detected further south. The Gulf Stream and warm core rings may
-facilitate the recruitment transport of juvenile squid, but potential
-for inputs to the population from the South and offshore are difficult
-to quantify.
+warm slope waters to overwinter. By May/June of the next year, they
+migrate back to shallow coastal shelf waters to spawn {[}1{]}. The
+fishery follows this pattern, occurring offshore in winter and inshore
+in summer. Recent work hypothesizes a winter cohort that hatches south
+of Cape Hatteras and migrates onto the Northeast shelf {[}2{]}. Fishery
+observations describe a spatial gradient of 1-6 cm mantle length (ML)
+squid from waters south of Hatteras through southern New England, with
+the smallest squid detected further south. The Gulf Stream and warm core
+rings may facilitate the recruitment transport of juvenile squid, but
+potential for inputs to the population from the South and offshore are
+difficult to quantify.
 
 \vspace{0.25cm}
 
@@ -281,9 +279,9 @@ to quantify.
 Spawning peaks inshore from late spring to early summer in the
 Mid-Atlantic and southern New England {[}3{]} {[}1{]} with hatching in
 late summer {[}4{]}. Consideration of the hypothesis of a winter cohort
-spawning south of Hatteras indicates the presence of multiple cohorts of
-longfin squid, with some outside of the traditional Northeast shelf
-stock area, and provides evidence of year-round spawning in the stock.
+spawning south of Hatteras indicates the presence of multiple cohorts
+with some outside of the traditional Northeast shelf stock area, and
+provides evidence of year-round spawning.
 
 \vspace{0.25cm}
 
@@ -293,8 +291,8 @@ Although natural mortality is expected to be age-dependent, lack of
 accurate age data makes further study difficult. Using the equation
 derived by Hamel and Cope {[}5{]}, natural mortality for longfin squid
 can range from 0.36 (max. age = 15 mo.) to 0.675 (max. age = 8 mo.).
-Intraspecific predation impacts natural mortality, but there is no
-available data to quantify the amount of mortality this causes.
+Cannibalism impacts natural mortality, but there is no available data to
+quantify the amount of mortality this causes.
 
 \includegraphics{C:/Users/stephanie.owen/Documents/longfinESP/images/longfin_life_history_0602.png}
 
@@ -318,7 +316,7 @@ available data to quantify the amount of mortality this causes.
 \raggedright
 
 The 2025 Mid-Atlantic EAFM Risk Assessment Update {[}6{]} determined
-that there are moderate-high risks of :
+that there are moderate-high risks related to:
 
 \begin{itemize}
 \tightlist
@@ -328,13 +326,14 @@ that there are moderate-high risks of :
   Not achieving optimum yield due to interactions with non-MAFMC managed
   species
 \item
-  Regulatory complexity negatively impacting optimum yield due to
-  occasional recent changes in regulations and moderate (3-4)
-  recreational regulation differences across states
+  Regulatory complexity: occasional recent changes in regulations and
+  moderate (3-4) recreational regulation differences across states.
+  Compliance is challenging for fishery participants given complex
+  regulations.
 \item
-  Not minimizing bycatch and discards to the extent practicable due to
-  regular, managed discards and incidental catch and moderate discard
-  mortality
+  Discards: While various management measures have minimized discards to
+  the extent practicable, ecosystem changes may affect existing
+  measures.
 \end{itemize}
 
 Risk elements are aspects that may threaten achieving the biological,
@@ -392,31 +391,37 @@ elements in 2025.
 
 
 \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Commercial\ landings\ (millions\ of\ lbs.)
-}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{\linebreak }}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Near\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Environmental\ dynamics\ vary\ between\ locations/timing\ of\ the\ summer\ and\ winter\ squid\ fisheries.\ An\ increase\ in\ landings\ since\ 2020\ but\ decrease\ in\ number\ of\ vessels\ could\ indicate\ targeted\ trips\ in\ specific\ times\ of\ year\ and\ fishers\ targeting\ other\ species\ when\ longfin\ are\ not\ available.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-1.png}} \\
+}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{\linebreak }}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Near\ long\ term\ (1996-2024)\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Environmental\ dynamics\ vary\ between\ locations/timing\ of\ the\ summer\ and\ winter\ squid\ fisheries.\ An\ increase\ in\ landings\ since\ 2020\ but\ decrease\ in\ number\ of\ vessels\ could\ indicate\ targeted\ trips\ in\ specific\ times\ of\ year\ and\ fishers\ targeting\ other\ species\ when\ longfin\ are\ not\ available.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-1.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Number\ of\ commercial\ vessels\ (\#\ \ of\ federally-permitted\ vessels\ landing\ over\ 1lb\ of\ longfin\ squid)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Number\ of\ commercial\ vessels\ has\ been\ steadily\ decreasing\ since\ around\ 2000\ consistent\ with\ decreasing\ fleet\ diversity\ and\ continued\ risk\ to\ fishery\ resilience\ [7].\ Permit\ requalification\ in\ 2019\ and\ a\ decrease\ in\ the\ incidental\ limit\ for\ trimester\ 2\ resulted\ in\ fishery\ closures\ in\ 2022\ and\ 2023,\ which\ may\ contribute\ to\ decreased\ participation.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-2.png}} \\
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Number\ of\ commercial\ vessels\ (\#\ \ of\ federally-permitted\ vessels\ landing\ over\ 1lb\ of\ longfin\ squid)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Below\ long\ term\ (1996-2024)\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Number\ of\ commercial\ vessels\ has\ been\ steadily
+}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{\linebreak }}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{decreasing\ since\ around\ 2000\ consistent\ with
+}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{\linebreak }}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{decreasing\ fleet\ diversity\ and\ continued\ risk\ to
+}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{\linebreak }}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{fishery\ resilience\ [7].\ Permit\ requalification\ in\ 2019\ and\ a\ decrease\ in\ the\ post-closure\ trip\ \ limit\ for\ trimester\ 2\ may\ cap\ participation,\ although\ these\ actions\ were\ designed\ to\ accommodate\ recent\ fishing\ trends\ and\ activity.}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-2.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Commercial\ revenue\ (millions\ 2024\ USD)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Below\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Average\ Longfin\ ex-vessel\ prices\ in\ 2024\ increased\ slightly\ from\ 2023\ (+10\%),\ but\ commercial\ revenue\ has\ decreased\ from\ 2023\ which\ is\ most\ likely\ driven\ by\ a\ an\ overall\ decrease\ in\ landings\ by\ 23\%\ [7].}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-3.png}} \\
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Commercial\ revenue\ (millions,\ inflation\ adjusted\ to\ 2024\ USD)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Below\ long\ term\ (1996-2024)\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Average\ longfin\ ex-vessel\ prices\ in\ 2024
+}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{\linebreak }}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{increased\ slightly\ from\ 2023\ (+10\%),\ but
+}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{\linebreak }}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{commercial\ revenue\ has\ decreased\ from\ 2023,\ driven\ by\ the\ overall
+}}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{\linebreak }}}\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{decrease\ in\ landings\ by\ 23\%\ [7].}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-3.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Western\ Gulf\ Stream\ Index\ (shift\ in\ the\ western\ part\ of\ the\ Gulf\ Stream\ North\ wall:\ mean\ position:\ >0\ =\ more\ northerly,\ <0\ =\ more\ southerly)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Above\ long\ term\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Since\ the\ mid-1990s,\ north\ and\ westward\ shifts\ in\ the\ Gulf\ Stream\ have\ resulted\ in\ an\ increase\ in\ warm\ core\ rings\ and\ deep\ water,\ high\ salinity\ heat\ waves.\ The\ position\ of\ the\ Gulf\ Stream\ influences\ seasonal\ temperature\ and\ water\ mass\ mixing\ dynamics\ that\ affect\ longfin\ squid\ habitat\ suitability,\ temperature-dependent\ growth,\ and\ prey\ availability\ (https://noaa-edab.github.io/catalog/gsi.html).}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-4.png}} \\
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Western\ Gulf\ Stream\ Index\ (shift\ in\ the\ western\ part\ of\ the\ Gulf\ Stream\ North\ wall:\ mean\ position:\ >0\ =\ more\ northerly,\ <0\ =\ more\ southerly)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Above\ long\ term\ (1996-2024)\ average}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Since\ the\ mid-1990s,\ north\ and\ westward\ shifts\ in\ the\ Gulf\ Stream\ have\ resulted\ in\ an\ increase\ in\ warm\ core\ rings\ and\ deep\ water,\ high\ salinity\ heat\ waves.\ The\ position\ of\ the\ Gulf\ Stream\ influences\ seasonal\ temperature\ and\ water\ mass\ mixing\ dynamics\ that\ affect\ longfin\ squid\ habitat\ suitability,\ temperature-dependent\ growth,\ and\ prey\ availability\ (https://noaa-edab.github.io/catalog/gsi.html).}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-4.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
 
 
-\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Bottom\ temperature\ in\ MAB\ and\ SNE(°C)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Above\ long\ term\ average\ (Fall);\ near\ long\ term\ average\ (Spring)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Inshore\ temperature\ thresholds\ (around\ 14°C)\ initiate\ migration\ of\ squid\ from\ offshore\ overwintering\ habitats.\ Longfin\ squid\ seasonal\ distribution\ and\ growth\ rates\ are\ likely\ temperature\ dependent,\ avoiding\ water\ <8°C.\ Stronger\ and/or\ more\ persistent\ Mid-Atlantic\ Cold\ Pool\ conditions\ (not\ shown)\ may\ limit\ habitat\ availability\ (https://noaa-edab.github.io/catalog/cold\_pool.html).}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1.5in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-5.png}} \\
+\multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.9in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Bottom\ temperature\ in\ MAB\ and\ SNE(°C)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 0.75in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Above\ long\ term\ (1996-2024)\ average\ (Fall);\ near\ long\ term\ (1996-2024)\ average\ (Spring)}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\raggedright}m{\dimexpr 3in+0\tabcolsep}}{\textcolor[HTML]{000000}{\fontsize{10}{10}\selectfont{\global\setmainfont{Times New Roman}{Inshore\ temperature\ thresholds\ (around\ 14°C)\ initiate\ migration\ of\ squid\ from\ offshore\ overwintering\ habitats.\ Longfin\ squid\ seasonal\ distribution\ and\ growth\ rates\ are\ likely\ temperature\ dependent,\ avoiding\ water\ <8°C.\ Stronger\ and/or\ more\ persistent\ Mid-Atlantic\ Cold\ Pool\ conditions\ (not\ shown)\ may\ limit\ habitat\ availability\ (https://noaa-edab.github.io/catalog/cold\_pool.html).}}}} & \multicolumn{1}{!{\color[HTML]{666666}\vrule width 0.75pt}>{\centering}m{\dimexpr 3in+0\tabcolsep}!{\color[HTML]{666666}\vrule width 0.75pt}}{\includegraphics[width=3in, height=1.5in]{snapshot_template_files/figure-pdf/unnamed-chunk-2-5.png}} \\
 
 \ascline{0.75pt}{666666}{1-4}
 
@@ -452,25 +457,17 @@ Document \newline
   indicative of changes in oceanographic processes on a smaller time
   scale.
 \item
-  While literature generally supports a life span around 1 year, various
-  studies and data indicate a maximum age anywhere between 6 to 15
-  months. A large range of potential maximum ages creates uncertainty
-  around life history processes, spawning timing, and natural mortality.
+  Aging uncertainty creates uncertainty around life history processes,
+  spawning location and timing, and natural mortality.
 \item
-  A hypothesis has been proposed regarding longfin squid spawning South
-  of Cape Hatteras in the winter months. While survey data in the 1970s
-  and 80s indicate larval squid in this region that are transported
-  north into the Mid-Atlantic Bight, there is a lack of definitive data
-  to prove this hypothesis. If one assumes this hypothesis is true,
-  further questions arise concerning maximum age and inputs to the
-  population from South Atlantic Bight spawning.
+  While survey data in the 1970s and 80s indicate larval squid south of
+  Cape Hatteras in the winter months that are transported north into the
+  Mid-Atlantic Bight, there is a lack of definitive data to prove this
+  hypothesis.
 \item
-  Lack of a definitive maximum age of longfin squid affects calculations
-  of natural mortality. Effects of cannibalism on the population are
-  unknown at this time.
+  Effects of cannibalism on the population are unknown at this time.
+  \vspace{0.5cm}
 \end{itemize}
-
-\vspace{0.5cm}
 
 \centering\normalsize
 
